--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peace for Ukraine</title>
     <style>
+        body {
+            background-color: #a4dceb;
+        }
+
         main {
             display: grid;
             place-items: center;
