--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             /* font-family: 'Kingthings Xstitch', sans-serif; */
             font-family: 'Leckerli One', cursive;
             /* font-family: 'Pacifico', cursive; */
-            font-size: 4.5em;
+            font-size: 2em;
             font-weight: normal;
             /* background-color: red; */
         }
@@ -92,8 +92,8 @@
             <h1>Wishing you...</h1>
         </header>
         <main>
-            <img src="images/star.png" width="598" height="602" alt="star" id="star">
-            <img src="images/courage.png" width="682" height="172" alt="courage" id="courage">
+            <img src="images/star.png" width="300" alt="star" id="star">
+            <img src="images/courage.png" width="340" alt="courage" id="courage">
         </main>
     </div>
 </body>
