--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             --app-height: 100%;
         }
 
+        html,
+        body {
+            padding: 0;
+            margin: 0;
+            height: 100vh;
+            /* fallback for Js load */
+            height: var(--doc-height);
+        }
+
         body {
             background-color: #a4dceb;
             color: #444;
@@ -26,7 +35,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            /* height: 100vh; */
             /* display: grid;
             place-items: center; */
             /* width:100vw; */
@@ -78,7 +87,7 @@
                 transform: translateY(-50%) scale(0);
             }
 
-            98% {
+            97% {
                 transform: translateY(-50%) scale(1.1);
             }
 
