--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h1>Wishing you...</h1>
         </header>
         <main>
-            <img src="images/star.png" width="300" alt="star" id="star">
+            <img src="images/star3.png" width="400" height="400" alt="star" id="star">
             <img src="images/courage.png" width="340" alt="courage" id="courage">
         </main>
     </div>
