--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <title>For Ukraine</title>
     <style>
-        :root {
+        /* :root {
             --app-height: 100%;
-        }
+        } */
 
         html,
         body {
@@ -22,10 +22,7 @@
             margin: 0;
             height: 100vh;
             /* fallback for Js load */
-            height: var(--doc-height);
-        }
-
-        body {
+            height: var(--app-height);
             background-color: #a4dceb;
             color: #444;
         }
@@ -35,14 +32,17 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            /* height: 100vh; */
+            height: 100vh;
             /* display: grid;
             place-items: center; */
             /* width:100vw; */
-            height: 100vh;
+            /* height: 100vh; */
+            /* height: var(--app-height); */
         }
 
         h1 {
+            margin: 0;
+            padding: 0;
             /* font-family: 'Kingthings Xstitch', sans-serif; */
             font-family: 'Leckerli One', cursive;
             /* font-family: 'Pacifico', cursive; */
