--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             display: grid;
             place-items: center;
             position: relative;
+            top: -3%;
             /* background-color: purple; */
         }
 
