--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </header>
         <main>
             <img src="images/star3.png" width="400" height="400" alt="star" id="star">
-            <img src="images/courage.png" width="340" alt="courage" id="courage">
+            <img src="images/courage2.png" width="400" height="112" alt="courage" id="courage">
         </main>
     </div>
 
