more graphics coming

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <img src="images/star3.png" width="400" height="400" alt="star" id="star">
             <img src="images/courage3.png" width="400" height="105" alt="courage" id="courage">
         </main>
+        <p>more graphics coming soon...</p>
     </div>
 
     <script>
