--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             /* font-family: 'Pacifico', cursive; */
             font-size: 3em;
             font-weight: normal;
+            text-shadow: 2px 2px 4px gray;
             /* background-color: red; */
         }
 
