put more graphics message back in

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             <img src="images/courage3.png" width="400" height="105" alt="courage" id="banner"> -->
             <img src="images/flower.png" width="400" height="400" alt="star" id="image">
             <img src="images/beauty.png" width="400" height="105" alt="courage" id="banner">
+
+            <p>more graphics coming soon...</p>
         </main>
 
     </div>
