cleaned up code

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
             <h1>Wishing you...</h1>
         </header>
         <main>
-            <img src="images/star3.png" width="400" height="400" alt="star" id="image">
-            <img src="images/courage3.png" width="400" height="105" alt="courage" id="banner">
-            <!-- <img src="images/flower.png" width="400" height="400" alt="star" id="image">
-            <img src="images/beauty.png" width="400" height="105" alt="courage" id="banner"> -->
-
-            <p>more graphics coming soon...</p>
+            <img src="images/star3.png" width="400" height="400" alt="embroidered image" id="image">
+            <img src="images/courage3.png" width="400" height="105" alt="embroidered badge" id="banner">
         </main>
 
     </div>
