--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Wishing you...</h1>
         </header>
         <main>
-            <img src="images/star3.png" width="400" height="400" alt="embroidered image" id="image">
+            <img src="images/star3.png" width="400" height="400" alt="embroidered image" id="image" class="image">
             <img src="images/courage3.png" width="400" height="105" alt="embroidered badge" id="banner">
         </main>
 
